feat: Implement user authentication and profile management
- Added RecipemanagerContext for database context with DbSet for Users, Recipes, and Favorites.
- Introduced DevelopmentAuthMiddleware to bypass authentication in development mode.
- Created models for Favorite, Recipe, and User with navigation properties.
- Updated Program.cs to include middleware for development authentication bypass.
- Added user profile endpoints for fetching and updating user information.
- Implemented AccountSettings page for managing user profile and password.
- Integrated AuthForm component for user sign-in and sign-up functionality.
- Enhanced Landing page with navigation to account settings and authentication options.
- Updated API service to include user profile management functions.
- Configured development settings in appsettings.Development.json for test user.

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -9,6 +9,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=recipemanager.db"
   },
+  "Development": {
+    "BypassAuthentication": true,
+    "TestUser": {
+      "AuthSub": "dev-user-001",
+      "Email": "dev@localhost.com",
+      "DisplayName": "Dev User"
+    }
+  },
   "Firebase": {
     "ProjectId": "your-firebase-project-id",
     "Audience": "your-firebase-project-id"
